DONE: Url genertion for content and access content via url

--- a/frontend/src/app/paste-content/paste-content.component.html
+++ b/frontend/src/app/paste-content/paste-content.component.html
@@ -2,7 +2,7 @@
 
 <div class="app-paste">
     <div *ngIf="pasteId">
-      <h3>Your Paste ID: {{ pasteId }}</h3>
+      <p>Your Paste URL: {{ pasteURL }}</p>
       <button (click)="reset()">Create Another Paste</button>
     </div>
     <div *ngIf="!pasteId">
